--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="title_video">视频</string>
     <string name="title_person">个人</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="python">Python学科</string>
+    <string name="java">Java学科</string>
+    <string name="php">PHP学科</string>
+    <string name="android">Android学科</string>
 </resources>
